--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     </head>
     <body>
       <div class="login-container">
-        <form action="" id="login-form">
-          <input type="text" name="email" placeholder="email">
-          <input type="password" name="password" placeholder="password">
-          <button type="submit">login</button>
+        <form id="login-form">
+            <input type="text" name="credentials[email]" placeholder="emails">
+            <input type="password" name="credentials[password]" placeholder="password">
+            <button type="submit">login</button>
+        </form>
+        <form name="sign-up" id="sign-up">
+            <input type="email" placeholder="email" name="credentials[email]">
+            <input type="password" placeholder="password" name="credentials[password]">
+            <input type="password" placeholder="password confirmation" name="credentials[password_confirmation]">
+            <button type="submit">Create New Account</button>
         </form>
       </div>
     <div class="board-container">
