--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <div id="Information">
         <h4>Current Player</h4>
         <button id="new-game">New Game</button>
+        <button type="submit" id="logout"></button>
       </div>
     </div>
     <div id="winner">
