Create new game
-Button to create Button
-Event listener in game-events.js
-Api call in gameapi.js
-Use token stored in store.js for authentication
-Store return information from api in store.game
-Game information stored as an array, format seen in docs

--- a/index.html
+++ b/index.html
@@ -52,14 +52,16 @@
       </table>
       <div id="Information">
         <h4>Current Player</h4>
-        <button id="new-game">New Game</button>
         <form id="log-out" name="log-out">
           <fieldset>
             <button type="submit">Run away</button>
           </fieldset>
-
         </form>
-
+      <form id="new-game" name="new-game">
+        <fieldset>
+          <button type="submit">New Game</button>
+        </fieldset>
+      </form>
       </div>
     </div>
     <div id="winner">
