Grab count of total games played
-Button in information container in html
-Event listener in game-event
-Call to API with token in gameapi.js
-UI response logs response

--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
         <fieldset>
           <button type="submit">New Game</button>
         </fieldset>
-      </form>
-      <form id="change-password">
-        <fieldset>
+        <fieldset id="change-password">
           <input type="password" name="passwords[old]" placeholder="Old password">
           <input type="password" name="passwords[new]" placeholder="Newer Password">
           <button type="submit">Submit!</button>
+        </fieldset>
+        <fieldset id="old-games">
+          <button type="submit" name="old-games">Old Game Count</button>
         </fieldset>
     </form>
       </div>
