--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           <input type="password" placeholder="password confirmation" name="credentials[password_confirmation]">
           <button type="submit">Create New Account</button>
       </form>
+      <div id="login-message">
+      </div>
     </div>
     <div class="board-container">
       <table id="game-board" class="hidden">
@@ -70,6 +72,8 @@
           <button type="submit" name="old-games">Old Game Count</button>
         </fieldset>
       </form>
+      <div id="old-games-info">
+      </div>
     </div>
     </body>
 </html>
