Fix change password
-Fix html
-Add gameboard to toggle for changePassword in auth ui

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <fieldset>
         <button type="submit">New Game</button>
       </fieldset>
-      </form id="change-password" name="change-password">
-      <form>
+      </form>
+      <form id="change-password" name="change-password">
         <fieldset>
           <input type="password" name="passwords[old]" placeholder="Old password">
           <input type="password" name="passwords[new]" placeholder="Newer Password">
