--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="display" class="text-center">
       <h1>Tic Tac Toe</h1>
     </div>
-    <div id="loginContainer container" class="text-center">
+    <div id="login-container">
       <form id="login-form" class="col-md-2">
           <input type="text" name="credentials[email]" placeholder="email">
           <input type="password" name="credentials[password]" placeholder="password">
