--- a/index.html
+++ b/index.html
@@ -55,9 +55,18 @@
           <button type="submit">Run away</button>
         </fieldset>
       </form>
-      <form id="new-game">
+      <form id="new-game-human">
+        <fieldset>
+          <button type="submit">play human</button>
+        </fieldset>
+      </form>
+      <form id="new-game-computerO">
       <fieldset>
-        <button type="submit">New Game</button>
+        <button type="submit">Play Computer you go first</button>
+      </fieldset>
+      <form id="new-game-computerX">
+      <fieldset>
+        <button type="submit">Play Computer You go second</button>
       </fieldset>
       </form>
       <form id="change-password" name="change-password">
